Updated UserProfile components and services to handle backend integration"