@@ -1,7 +1,6 @@
 package de.sep.calocalendar.service;
 
 import de.sep.calocalendar.mapper.UserProfileMapper;
-import de.sep.calocalendar.mapper.UserProfileMapperImpl;
 import de.sep.calocalendar.model.UserProfileModel;
 import de.sep.calocalendar.repository.UserProfileRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -9,6 +8,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class UserProfileService {
@@ -17,7 +17,7 @@ public class UserProfileService {
     private UserProfileRepository repo;
 
     @Autowired
-    private final UserProfileMapper mapper = new UserProfileMapperImpl();
+    private UserProfileMapper mapper;
 
     public Optional<Long> addUserProfile(UserProfileModel model) {
         if (model.getId() != null) throw new IllegalArgumentException("Don't give an id!");
@@ -34,7 +34,7 @@ public class UserProfileService {
 
         var models = entities.stream()
                 .map(mapper::toModel)
-                .toList();
+                .collect(Collectors.toList());
 
         return Optional.of(models);
     }
